--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </div>
               <div class="user"><img src="./public/img/user.png" alt="user"></div>
             </main>
-            <img src="./public/img/logo.png" alt="logo">
+            <img src="./public/img/logo.png" alt="logo" class="logo">
           </nav>
             <div class="section">
                 <div class="main-2">
@@ -54,35 +54,36 @@
                             <p class="subheading">Personalized solutions, expertly crafted to meet your unique project type.</p>
                         </div>
                         <div class="cards">
-                            <div class="body-wrapper">
-                                <div class="body">
-                                    <div class="div-2">
-                                        <div class="title">Create a Brand</div>
-                                        <p class="body-text-for">
-                                            We peel back the layers of your business, customers, and the way you want to tell your story to
-                                            the world so that we craft your brand identity with the bigger picture in mind.
-                                        </p>
-                                    </div>
-                                    <div class="button-group">
-                                        <button class="button"><button class="button-2">Find out more</button></button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="body-wrapper">
-                                <div class="body">
-                                    <div class="div-2">
-                                        <div class="title">Build a Website</div>
-                                        <p class="body-text-for">
-                                            We craft digital spaces that captivate, inform, and turn clicks into customers. Your journey
-                                            online starts here, where creativity meets functionality for a seamless user experience.
-                                        </p>
-                                    </div>
-                                    <div class="button-group">
-                                        <button class="button-wrapper"><button class="button-3">Find out more</button></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                          <div class="body-wrapper">
+                              <div class="body">
+                                  <div class="div-2">
+                                      <div class="title">Create a Brand</div>
+                                      <p class="body-text-for">
+                                          We peel back the layers of your business, customers, and the way you want to tell your story to
+                                          the world so that we craft your brand identity with the bigger picture in mind.
+                                      </p>
+                                  </div>
+                                  <div class="button-group">
+                                      <button class="button-2">Find out more</button> <!-- Removed nested button -->
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="body-wrapper">
+                              <div class="body">
+                                  <div class="div-2">
+                                      <div class="title">Build a Website</div>
+                                      <p class="body-text-for">
+                                          We craft digital spaces that captivate, inform, and turn clicks into customers. Your journey
+                                          online starts here, where creativity meets functionality for a seamless user experience.
+                                      </p>
+                                  </div>
+                                  <div class="button-group">
+                                      <button class="button-3">Find out more</button> <!-- Removed nested button -->
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      
                     </div>
                 </div>
             </div>
